This is the first assignment in MVC

--- a/MVC_assignment/Views/Home/About.cshtml
+++ b/MVC_assignment/Views/Home/About.cshtml
@@ -4,4 +4,22 @@
 }
 
 <h1>About</h1>
+<br/>
+<h2>Curriculum vitae</h2>
+<ul>
+    <li>
+        <h3>@ViewBag.year1</h3>
+        <p>@ViewBag.content1</p>
+    </li>
+    <li>
+        <h3>@ViewBag.year2</h3>
+        <p>@ViewBag.content2</p>
+    </li>
+    <li>
+        <h3>@ViewBag.year3</h3>
+        <p>@ViewBag.content3</p>
+    </li>
+    
+</ul>
+
 
