--- a/MVC_assignment/Views/Home/Projects.cshtml
+++ b/MVC_assignment/Views/Home/Projects.cshtml
@@ -4,4 +4,39 @@
 }
 
 <h1>Projects</h1>
+<h2>This is projects that is stored in repository at GitHub</h2>
+
+
+<p><a href="@ViewBag.project1">Console Calculator</a></p>
+<p>@ViewBag.description1</p>
+<br />
+<a href="@ViewBag.project2">Hang man</a>
+<p>@ViewBag.description2</p>
+<br />
+<a href="@ViewBag.project3">Vending Machine</a>
+<p>@ViewBag.description3</p>
+<br />
+<a href="@ViewBag.project4">HTML & CSS</a>
+<p>@ViewBag.description4</p>
+<br />
+<a href="@ViewBag.project5">Sokoban</a>
+<p>@ViewBag.description5</p>
+<br />
+<a href="@ViewBag.project6">MVC</a>
+<p>@ViewBag.description6</p>
+<br />
+
+
+
+
+<!-- How to do a for-loop??? I am intrested of how to do that. I put AT insted of snabel-A.
+
+ATfor (int i = 0; i < 4; i++)
+{
+    <a>href= "AT{"ViewBag.project" + (i + 1)}">Login</a>
+
+}
+
+
+
 
