--- a/MVC_assignment/Views/Home/Contact.cshtml
+++ b/MVC_assignment/Views/Home/Contact.cshtml
@@ -4,9 +4,12 @@
 }
 
 <h1>Contact</h1>
-    <h2>Adress:</h2>
-        <p>@ViewBag.adress</p>
-    <h2>Mobile:</h2>
-        <p>@ViewBag.mobile</p>
-    <h2>e-mail:</h2>
-        <p>@ViewBag.email</p>
+<h2>Adress:</h2>
+<p>@ViewBag.adress</p>
+<h2>Mobile:</h2>
+<p>@ViewBag.mobile</p>
+<h2>e-mail: @ViewBag.email</h2>
+
+<p><a href="mailto:@ViewBag.email">Send e-mail to Anders</a></p>
+
+
