a fever check in a new controller is in. Shall validate the values in next push.

--- a/MVC_assignment/Views/Home/Projects.cshtml
+++ b/MVC_assignment/Views/Home/Projects.cshtml
@@ -30,10 +30,10 @@
 
 
 <!-- How to do a for-loop??? I am intrested of how to do that. I put AT insted of snabel-A.
-
+    Use ViewData["project" + i]
 ATfor (int i = 0; i < 4; i++)
 {
-    <a>href= "AT{"ViewBag.project" + (i + 1)}">Login</a>
+    <a>href= "{"ViewBag.project" + (i + 1)}">Login</a>
 
 }
 
