Final version of assignment 3. The Guessed number game is implemnted with session for the random number.

--- a/MVC_assignment/Views/Shared/_Layout.cshtml
+++ b/MVC_assignment/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Logo</h1>
+        
         <!-- The tilde ~/images  is to get the image at wwwroot -->
         <img src="~/images/cafeLogo.jpg" alt="café logo" style="width:200px;height:120px" />
 
@@ -18,7 +18,8 @@
             <div>@Html.ActionLink("Contact", "Contact", "Home") </div>
             <div>@Html.ActionLink("Projects", "Projects", "Home") </div>
             <div>@Html.ActionLink("Doctor for you", "Index", "Doctor") </div>
-            <div>@Html.ActionLink("Check if fever", "FeverCheck", "Doctor")</div>
+            <div>@Html.ActionLink("Check if fever", "FeverCheck", "Doctor") </div>
+            <div>@Html.ActionLink("Gues the number", "GuessingGame", "Home" ) </div>
 
         </nav>
     </header>
